Update application to use hazdev-ng-template, update tests

--- a/src/app/event-page/event-page/event-page.component.html
+++ b/src/app/event-page/event-page/event-page.component.html
@@ -1,11 +1,10 @@
 <ng-container *ngIf="this?.eventService?.event$ | async;
     else noEvent; let event">
-  <app-hazdev-template>
+  <hazdev-template>
     <event-page-header [event]="event"></event-page-header>
 
     <mat-nav-list templateSideNavigation>
-      <event-page-navigation
-          class="site-sectionnav" [event]="event"></event-page-navigation>
+      <event-page-navigation class="site-sectionnav" [event]="event"></event-page-navigation>
     </mat-nav-list>
 
     <ng-container *ngIf="!event?.deleted; else deletedEvent">
@@ -14,22 +13,18 @@
 
     <ng-template #deletedEvent>
       <p class="alert error">
-        The requested event has been <strong>deleted</strong>.
+        The requested event has been
+        <strong>deleted</strong>.
       </p>
 
-      <shared-text-product
-        *ngFor="let product of event?.getProducts('deleted-text');
-            trackBy: trackByIndex"
-        [product]="product">
+      <shared-text-product *ngFor="let product of event?.getProducts('deleted-text');
+            trackBy: trackByIndex" [product]="product">
       </shared-text-product>
     </ng-template>
 
 
-    <event-page-footer
-        [event]="event"
-        [contributors]="this?.contributorService?.contributors$ | async"
-    ></event-page-footer>
-  </app-hazdev-template>
+    <event-page-footer [event]="event" [contributors]="this?.contributorService?.contributors$ | async"></event-page-footer>
+  </hazdev-template>
 </ng-container>
 
 <ng-template #noEvent>
