--- a/src/app/unknown-event-page/unknown-event-page/unknown-event-page.component.html
+++ b/src/app/unknown-event-page/unknown-event-page/unknown-event-page.component.html
@@ -1,4 +1,4 @@
-<app-hazdev-template TITLE="Unknown Event">
+<hazdev-template TITLE="Unknown Event">
 
   <mat-nav-list templateSideNavigation>
   </mat-nav-list>
@@ -10,4 +10,4 @@
   <event-page-footer [contributors]="false">
   </event-page-footer>
 
-</app-hazdev-template>
+</hazdev-template>
