--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -1,74 +1,44 @@
 <ng-container *ngIf="event; let event">
 
-  <a templateSideNavigation class="up-one-level"
-      href="/earthquakes/map/">Latest Earthquakes</a>
+    <a templateSideNavigation class="up-one-level" href="/earthquakes/map/">Latest Earthquakes</a>
 
-  <app-navigation-group>
-    <app-navigation-item navGroupHeader display="Overview"
-        navRouterLink="executive"></app-navigation-item>
+    <hazdev-template-navigation-group>
+        <hazdev-template-navigation-item navGroupHeader display="Overview" navRouterLink="executive"></hazdev-template-navigation-item>
 
-    <app-navigation-item display="Interactive Map"
-        navRouterLink="map"></app-navigation-item>
-    <app-navigation-item display="Regional Information"
-        navRouterLink="region-info"></app-navigation-item>
-  </app-navigation-group>
+        <hazdev-template-navigation-item display="Interactive Map" navRouterLink="map"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item display="Regional Information" navRouterLink="region-info"></hazdev-template-navigation-item>
+    </hazdev-template-navigation-group>
 
-  <app-navigation-group *ngIf="hasImpact(event); else noImpact">
-    <app-navigation-item navGroupHeader display="Impact"
-        navRouterLink="impact"></app-navigation-item>
+    <hazdev-template-navigation-group *ngIf="hasImpact(event); else noImpact">
+        <hazdev-template-navigation-item navGroupHeader display="Impact" navRouterLink="impact"></hazdev-template-navigation-item>
 
-    <app-navigation-item display="Felt Report - Tell Us!"
-        navRouterLink="tellus"></app-navigation-item>
-    <app-navigation-item *ngIf="event?.hasProducts('dyfi')"
-        display="Did You Feel It?"
-        navRouterLink="dyfi"></app-navigation-item>
-    <app-navigation-item *ngIf="event?.hasProducts('shakemap')"
-        display="ShakeMap"
-        navRouterLink="shakemap"></app-navigation-item>
-    <app-navigation-item *ngIf="event?.hasProducts('losspager')"
-        display="PAGER" navRouterLink="pager"></app-navigation-item>
-    <app-navigation-item *ngIf="event?.hasProducts('ground-failure')"
-        display="Ground Failure"
-        navRouterLink="ground-failure"></app-navigation-item>
-  </app-navigation-group>
+        <hazdev-template-navigation-item display="Felt Report - Tell Us!" navRouterLink="tellus"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts('dyfi')" display="Did You Feel It?" navRouterLink="dyfi"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts('shakemap')" display="ShakeMap" navRouterLink="shakemap"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts('losspager')" display="PAGER" navRouterLink="pager"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts('ground-failure')" display="Ground Failure" navRouterLink="ground-failure"></hazdev-template-navigation-item>
+    </hazdev-template-navigation-group>
 
-  <app-navigation-group *ngIf="hasScientific(event)">
-    <app-navigation-item navGroupHeader
-        display="Technical"
-        navRouterLink="technical"></app-navigation-item>
+    <hazdev-template-navigation-group *ngIf="hasScientific(event)">
+        <hazdev-template-navigation-item navGroupHeader display="Technical" navRouterLink="technical"></hazdev-template-navigation-item>
 
-    <app-navigation-item *ngIf="event?.hasProducts(['origin', 'phase-data'])"
-        display="Origin"
-        navRouterLink="origin"></app-navigation-item>
-    <app-navigation-item *ngIf="event?.hasProducts('moment-tensor')"
-        display="Moment Tensor"
-        navRouterLink="moment-tensor"></app-navigation-item>
-    <app-navigation-item *ngIf="event?.hasProducts('focal-mechanism')"
-        display="Focal Mechanism"
-        navRouterLink="focal-mechanism"></app-navigation-item>
-    <app-navigation-item *ngIf="event?.hasProducts('finite-fault')"
-        display="Finite Fault"
-        navRouterLink="finite-fault"></app-navigation-item>
-    <app-navigation-item display="Waveforms"
-        navRouterLink="waveforms"></app-navigation-item>
-    <app-navigation-item *ngIf="event?.hasProducts('oaf')"
-        display="Aftershock Forecast"
-        navRouterLink="oaf"></app-navigation-item>
-  </app-navigation-group>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts(['origin', 'phase-data'])" display="Origin" navRouterLink="origin"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts('moment-tensor')" display="Moment Tensor" navRouterLink="moment-tensor"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts('focal-mechanism')" display="Focal Mechanism" navRouterLink="focal-mechanism"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts('finite-fault')" display="Finite Fault" navRouterLink="finite-fault"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item display="Waveforms" navRouterLink="waveforms"></hazdev-template-navigation-item>
+        <hazdev-template-navigation-item *ngIf="event?.hasProducts('oaf')" display="Aftershock Forecast" navRouterLink="oaf"></hazdev-template-navigation-item>
+    </hazdev-template-navigation-group>
 
-  <app-navigation-item display="Download Event KML"
-    navHrefLink="{{ getKmlLink(event) }}"></app-navigation-item>
+    <hazdev-template-navigation-item display="Download Event KML" navHrefLink="{{ getKmlLink(event) }}"></hazdev-template-navigation-item>
 
-  <app-navigation-item display="View Nearby Seismicity"
-    navHrefLink="{{ event | nearbySeismicityLink }}"></app-navigation-item>
+    <hazdev-template-navigation-item display="View Nearby Seismicity" navHrefLink="{{ event | nearbySeismicityLink }}"></hazdev-template-navigation-item>
 
-  <ng-template #noImpact>
-    <app-navigation-item display="Felt Report - Tell Us!"
-        navRouterLink="tellus"></app-navigation-item>
-  </ng-template>
+    <ng-template #noImpact>
+        <hazdev-template-navigation-item display="Felt Report - Tell Us!" navRouterLink="tellus"></hazdev-template-navigation-item>
+    </ng-template>
 
-  <ng-template #noTechnical>
-    <app-navigation-item display="Waveforms"
-        navRouterLink="waveforms"></app-navigation-item>
-  </ng-template>
+    <ng-template #noTechnical>
+        <hazdev-template-navigation-item display="Waveforms" navRouterLink="waveforms"></hazdev-template-navigation-item>
+    </ng-template>
 </ng-container>
