--- a/src/app/shared/station/station.component.scss
+++ b/src/app/shared/station/station.component.scss
@@ -23,3 +23,11 @@
   display: block;
   margin-left: 8px;
 }
+
+mat-table.station-channels {
+  min-width: 800px;
+}
+
+dl.station-details {
+  max-width: 345px;
+}
