--- a/src/app/shared/station/station.component.html
+++ b/src/app/shared/station/station.component.html
@@ -34,7 +34,7 @@
     </mat-expansion-panel-header>
 
     <ng-template matExpansionPanelContent>
-      <dl class="description-table">
+      <dl class="description-table station-details">
         <dt>Network</dt>
         <dd>{{ station.properties?.network }}</dd>
         <dt>Location</dt>
@@ -46,90 +46,94 @@
       </dl>
 
       <h3>Channels</h3>
-      <mat-table [dataSource]="station?.channels">
-        <mat-header-row *matHeaderRowDef="channelsColumns">
-        </mat-header-row>
-        <mat-row *matRowDef="let myRowData; columns: channelsColumns">
-        </mat-row>
+      <div class="horizontal-scrolling">
+        <mat-table [dataSource]="station?.channels"
+          class="station-channels">
+          <mat-header-row *matHeaderRowDef="channelsColumns">
+          </mat-header-row>
+          <mat-row *matRowDef="let myRowData; columns: channelsColumns">
+          </mat-row>
 
-        <ng-container matColumnDef="name">
-          <mat-header-cell *matHeaderCellDef>
-            Name
-          </mat-header-cell>
-          <mat-cell [attr.role]="'rowheader'"
-            [class.mat-cell]="false"
-            class="mat-header-cell"
-            *matCellDef="let channel">
-            {{ channel.name }}
-          </mat-cell>
-        </ng-container>
+          <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef>
+              Name
+            </mat-header-cell>
+            <mat-cell [attr.role]="'rowheader'"
+              [class.mat-cell]="false"
+              class="mat-header-cell"
+              *matCellDef="let channel">
+              {{ channel.name }}
+            </mat-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="pga">
-          <mat-header-cell *matHeaderCellDef>
-            PGA
-          </mat-header-cell>
-          <mat-cell *matCellDef="let channel">
-            {{ channel.pga?.value | sharedNumber:2:channel?.pga?.units }}
+          <ng-container matColumnDef="pga">
+            <mat-header-cell *matHeaderCellDef>
+              PGA
+            </mat-header-cell>
+            <mat-cell *matCellDef="let channel">
+              {{ channel.pga?.value | sharedNumber:2:channel?.pga?.units }}
 
-            <shared-station-flag class="flag"
-              [flag]="channel?.pga?.flag">
-            </shared-station-flag>
-          </mat-cell>
-        </ng-container>
+              <shared-station-flag class="flag"
+                [flag]="channel?.pga?.flag">
+              </shared-station-flag>
+            </mat-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="pgv">
-          <mat-header-cell *matHeaderCellDef>
-            PGV
-          </mat-header-cell>
-          <mat-cell *matCellDef="let channel">
-            {{ channel.pgv.value | sharedNumber:2:channel?.pgv?.units }}
+          <ng-container matColumnDef="pgv">
+            <mat-header-cell *matHeaderCellDef>
+              PGV
+            </mat-header-cell>
+            <mat-cell *matCellDef="let channel">
+              {{ channel.pgv.value | sharedNumber:2:channel?.pgv?.units }}
 
-            <shared-station-flag class="flag"
-              [flag]="channel?.pgv?.flag">
-            </shared-station-flag>
-          </mat-cell>
-        </ng-container>
+              <shared-station-flag class="flag"
+                [flag]="channel?.pgv?.flag">
+              </shared-station-flag>
+            </mat-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="psa03">
-          <mat-header-cell *matHeaderCellDef>
-            PSA(03)
-          </mat-header-cell>
-          <mat-cell *matCellDef="let channel">
-            {{ channel.psa03.value | sharedNumber:2:channel?.psa03?.units }}
+          <ng-container matColumnDef="psa03">
+            <mat-header-cell *matHeaderCellDef>
+              PSA(03)
+            </mat-header-cell>
+            <mat-cell *matCellDef="let channel">
+              {{ channel.psa03.value | sharedNumber:2:channel?.psa03?.units }}
 
-            <shared-station-flag class="flag"
-              [flag]="channel?.psa03?.flag">
-            </shared-station-flag>
-          </mat-cell>
-        </ng-container>
+              <shared-station-flag class="flag"
+                [flag]="channel?.psa03?.flag">
+              </shared-station-flag>
+            </mat-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="psa10">
-          <mat-header-cell *matHeaderCellDef>
-            PSA(10)
-          </mat-header-cell>
-          <mat-cell *matCellDef="let channel">
-            {{ channel.psa10.value | sharedNumber:2:channel?.psa10?.units}}
+          <ng-container matColumnDef="psa10">
+            <mat-header-cell *matHeaderCellDef>
+              PSA(10)
+            </mat-header-cell>
+            <mat-cell *matCellDef="let channel">
+              {{ channel.psa10.value | sharedNumber:2:channel?.psa10?.units}}
 
-            <shared-station-flag class="flag"
-              [flag]="channel?.psa10?.flag">
-            </shared-station-flag>
-          </mat-cell>
-        </ng-container>
+              <shared-station-flag class="flag"
+                [flag]="channel?.psa10?.flag">
+              </shared-station-flag>
+            </mat-cell>
+          </ng-container>
 
-        <ng-container matColumnDef="psa30">
-          <mat-header-cell *matHeaderCellDef>
-            PSA(30)
-          </mat-header-cell>
-          <mat-cell *matCellDef="let channel">
-            {{ channel.psa30.value | sharedNumber:2:channel?.psa30?.units }}
+          <ng-container matColumnDef="psa30">
+            <mat-header-cell *matHeaderCellDef>
+              PSA(30)
+            </mat-header-cell>
+            <mat-cell *matCellDef="let channel">
+              {{ channel.psa30.value | sharedNumber:2:channel?.psa30?.units }}
 
-            <shared-station-flag class="flag"
-              [flag]="channel?.psa30?.flag">
-            </shared-station-flag>
-          </mat-cell>
-        </ng-container>
+              <shared-station-flag class="flag"
+                [flag]="channel?.psa30?.flag">
+              </shared-station-flag>
+            </mat-cell>
+          </ng-container>
 
-      </mat-table>
+        </mat-table>
+      </div>
+
 
     </ng-template>
   </mat-expansion-panel>
