--- a/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.scss
+++ b/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.scss
@@ -1,6 +1,10 @@
+mat-table {
+  min-width: 900px;
+}
+
 /* same amount of space as preferred icon */
 mat-cell.unpreferred:before {
-  content: ' ';
+  content: " ";
   display: inline-block;
   height: 16px;
   width: 16px;
