Add MouseOverLayer for US Faults

--- a/src/app/shared/map/map.component.html
+++ b/src/app/shared/map/map.component.html
@@ -1,4 +1,2 @@
-<div #mapWrapper
-     [class.noninteractive]="interactive === false"
-     (mousemove)="$event?.stopPropagation">
+<div #mapWrapper class="shared-map" [class.noninteractive]="interactive === false" (mousemove)="$event?.stopPropagation">
 </div>
