--- a/src/app/shared/map/map.component.scss
+++ b/src/app/shared/map/map.component.scss
@@ -1,4 +1,4 @@
-div {
+.shared-map {
   display: block;
   height: 100%;
   width: 100%;
@@ -6,4 +6,19 @@ div {
 
 .noninteractive {
   pointer-events: none;
+}
+
+.leaflet-mouseover-tooltip {
+  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.75);
+  border: 1px solid #333;
+  border-radius: 3px;
+  display: none;
+  font-size: 12px;
+  left: 0;
+  margin: -1.75em 0 0;
+  padding: 2px 4px;
+  position: absolute;
+  top: 0;
+  white-space: nowrap;
 }
